# PySpace

./: README.md  pyproject.toml  pyspace.json  pytest.ini  requirements.txt
.github/: copilot-instructions.md
cli/: main.py
cli/commands/: cache_clear.py  create.py  doctor.py  init.py  install.py  list.py  remove.py  status.py  use.py
daemon/: __init__.py  daemon.py  watcher.py
env_manager/: cache.py  config.py  environment.py  utils.py
pyspace.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
pyspace_daemon/: api.py  cache_manager.py  config_manager.py  env_manager.py  main.py  utils.py  workspace_manager.py
tests/: conftest.py  test_config_manager.py  test_daemon_integration.py  test_env_manager.py  test_pyenv_integration.py
~/.pyspace/: metadata.db
